--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "turkuaz-ts-core",
-  "version": "1.1.9",
+  "version": "1.1.10",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -16,13 +16,15 @@
     "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
-    "vue-property-decorator": "^8.2.1",
-    "vue-i18n": "^8.12.0",
+    "vue-property-decorator": "^8.2.2",
+    "vue-i18n": "^8.14.1",
+    "vue-router": "^3.1.3",
     "lodash": "^4.17.15",
-    "yuya.ts.odata-client": "^1.1.6"
+    "oidc-client": "^1.9.1",
+    "yuya.ts.odata-client": "^1.1.7"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.136",
-    "typescript": "^3.5.3"
+    "@types/lodash": "^4.14.139",
+    "typescript": "^3.6.3"
   }
 }
