--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "author": "Dogus Teknoloji Turkuaz Team",
   "license": "ISC",
   "dependencies": {
+    "deprecated-decorator": "^0.1.6",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "rimraf": "^3.0.0",
     "vue": "^2.6.10",
-    "vue-i18n": "^8.14.1",
-    "vue-property-decorator": "^8.2.2",
+    "vue-i18n": "^8.15.1",
+    "vue-property-decorator": "^8.3.0",
     "yuya.ts.odata-client": "^1.1.7"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.144",
-    "typescript": "^3.6.4"
+    "@types/lodash": "^4.14.149",
+    "typescript": "^3.7.2"
   }
 }
