--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "turkuaz-ts-core",
-  "version": "1.1.29",
+  "version": "1.1.30",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf ./dist && tsc"
+    "build": "rimraf ./dist && npx tsc"
   },
   "keywords": [],
   "author": "Dogus Teknoloji Turkuaz Team",
@@ -19,10 +19,10 @@
     "vue-i18n": "8.21.0",
     "vue-class-component": "7.2.5",
     "vue-property-decorator": "9.0.0",
-    "yuya.ts.odata-client": "1.1.9"
+    "yuya.ts.odata-client": "1.1.10"
   },
   "devDependencies": {
     "rimraf": "3.0.2",
-    "typescript": "4.0.2"
+    "typescript": "3.9.7"
   }
 }
