--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "turkuaz-ts-core",
-  "version": "1.1.36",
+  "version": "1.1.37",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "rimraf": "3.0.2",
+    "tslint": "6.1.3",
     "typescript": "4.0.5"
   }
 }
