--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "turkuaz-ts-core",
-  "version": "1.2.10",
+  "version": "1.4.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -12,18 +12,20 @@
   "author": "Dogus Teknoloji Turkuaz Team",
   "license": "ISC",
   "dependencies": {
-    "@types/lodash": "4.14.165",
     "lodash": "4.17.21",
-    "moment": "2.29.1",
+    "moment": "2.29.4",
     "vue": "2.6.12",
     "vue-class-component": "7.2.6",
     "vue-i18n": "8.24.1",
     "vue-property-decorator": "9.0.2",
-    "yuya.ts.odata-client": "1.1.11"
+    "yuya.ts.odata-client": "1.3.1"
   },
   "devDependencies": {
+    "@types/lodash": "4.14.191",
+    "@typescript-eslint/eslint-plugin": "5.47.0",
+    "@typescript-eslint/parser": "5.47.0",
+    "eslint": "8.30.0",
     "rimraf": "3.0.2",
-    "tslint": "6.1.3",
-    "typescript": "4.2.3"
+    "typescript": "4.9.4"
   }
 }
